--- a/iiot/taoyuang1000/join-tycg/privacy.html
+++ b/iiot/taoyuang1000/join-tycg/privacy.html
@@ -9,6 +9,21 @@
         <meta name="HandheldFriendly" content="true">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:type" content="website"/>
+        <link rel="apple-touch-icon" sizes="57x57" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"
+            href="https://taoyuan1000.tycg.gov.tw/images/icons/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://taoyuan1000.tycg.gov.tw/images/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="https://taoyuan1000.tycg.gov.tw/images/icons/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://taoyuan1000.tycg.gov.tw/images/icons/favicon-16x16.png">
+        <link rel="shortcut icon" href="https://taoyuan1000.tycg.gov.tw/images/icons/favicon.ico" />
         <link rel="stylesheet" href="css/style.css">
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     </head>
@@ -17,41 +32,44 @@
         <main class="landing for-dark">
             <!-- 這個要+在上面才會是暗黑版>~< -->
             <section class="contents-box privacy-content">
-                <div class="logo-s"></div>
+                <div class="logo-s logo-point-s"></div>
                 <h1 class="maintitle">隱私權及安全政策</h1>
-                <h3>關於個人資料保護，請參閱以下「數位桃園1000+市民卡振興加碼」的隱私權聲明：
-                「數位桃園1000+市民卡振興加碼」為桃園市政府資訊科技局所建置之活動共構平台(網站)，為支持個人資料保護，維護個人隱私權，「數位桃園1000+市民卡振興加碼」謹以下列聲明，向您說明「數位桃園1000+市民卡振興加碼」蒐集個人資料之目的、類別、利用範圍及方式、以及您所得行使之權利等事項。</h3>
+                <h3>關於個人資料保護，請參閱以下「紅利桃子」的隱私權聲明：
+                「紅利桃子」為桃園市政府資訊科技局所建置之活動共構平台(網站)，為支持個人資料保護，維護個人隱私權，「紅利桃子」謹以下列聲明，向您說明「紅利桃子」蒐集個人資料之目的、類別、利用範圍及方式、以及您所得行使之權利等事項。</h3>
                 
                 <h4>■ 適用範圍</h4>
-                <p>「數位桃園1000+市民卡振興加碼」隱私權聲明及其所包含之告知事項，適用於桃園市政府資訊科技局所舉辦之各式活動，平台內可能包含許多連結、或其他合作夥伴所提供的服務，關於該等連結網站或合作夥伴網站的隱私權聲明及與個人資料保護有關之告知事項，請參閱各該連結網站或合作夥伴網站，若您未滿二十歲，應於您之法定代理人閱讀、瞭解並同意本聲明之所有內容規定後，方得使用系統服務，但您已接受系統服務，則視為您已取得法定代理人之同意，並遵守以下所有規範。</p>
+                <p>「紅利桃子」隱私權聲明及其所包含之告知事項，適用於桃園市政府資訊科技局所舉辦之各式活動，平台內可能包含許多連結、或其他合作夥伴所提供的服務，關於該等連結網站或合作夥伴網站的隱私權聲明及與個人資料保護有關之告知事項，請參閱各該連結網站或合作夥伴網站，若您未滿二十歲，應於您之法定代理人閱讀、瞭解並同意本聲明之所有內容規定後，方得使用系統服務，但您已接受系統服務，則視為您已取得法定代理人之同意，並遵守以下所有規範。</p>
 
                 <h4>■ 個人資料蒐集之目的與類別</h4>
-                <p>「數位桃園1000+市民卡振興加碼」為了行銷、會員管理與服務、保護當事人及相關利害關係人之權益、辦理抽獎活動（包含確認得獎者身份、提供贈品及依法開立扣繳憑單等），可能蒐集您的姓名、連絡方式(包括電話、E-MAIL及地址等)、所需之資料ＩＰ位址、及其他得以直接或間接識別使用者身分之個人資料。<br>
-                此外，為提升服務品質，「數位桃園1000+市民卡振興加碼」會依照所提供服務之性質，記錄使用者的IP位址、以及在「數位桃園1000+市民卡振興加碼」相關網站內的瀏覽活動(例如，使用者所使用的軟硬體、所點選的網頁)、以及行動應用程式之使用紀錄等資料，但是這些資料僅供作流量分析和網路行為調查，以便於改善「數位桃園1000+市民卡振興加碼」相關網站與行動應用程式的服務品質，這些資料也只是總量上的分析，不會和特定個人相連繫。</p>
+                <p>「紅利桃子」為了行銷、會員管理與服務、保護當事人及相關利害關係人之權益、辦理抽獎活動（包含確認得獎者身份、提供贈品及依法開立扣繳憑單等），可能蒐集您的姓名、連絡方式(包括電話、E-MAIL及地址等)、所需之資料ＩＰ位址、及其他得以直接或間接識別使用者身分之個人資料。<br>
+                此外，為提升服務品質，「紅利桃子」會依照所提供服務之性質，記錄使用者的IP位址、以及在「紅利桃子」相關網站內的瀏覽活動(例如，使用者所使用的軟硬體、所點選的網頁)、以及行動應用程式之使用紀錄等資料，但是這些資料僅供作流量分析和網路行為調查，以便於改善「紅利桃子」相關網站與行動應用程式的服務品質，這些資料也只是總量上的分析，不會和特定個人相連繫。</p>
 
                 <h4>■ 個人資料的利用</h4>
-                <p>「數位桃園1000+市民卡振興加碼」所蒐集的足以識別使用者身分的個人資料，僅供桃園市政府資訊科技局之桃園市市民卡APP相關活動或「數位桃園1000+市民卡振興加碼」依照蒐集之目的進行處理和利用，並於提供服務期間內或法令所定應保存之期間內，持續保管、處理及利用相關資料。絕不會提供給其他第三人(包括境內及境外)、或移作蒐集目的以外之使用，但在符合法令規範或依循下列原則之前提下，可能將您的個人資料提供予第三人：<br>
-                    (一)取得您的同意或授權允許時<br>
-                    (二)為提供優惠措施，或為完成提供服務基於委外契約關係所必要者<br>
-                    (三)為協助辦理保險事故出險而提供給保險人<br>
-                (四)配合司法機關調查，或依相關法令規定或善意相信有權主管機關之命令或要求。</p>
+                <p>「紅利桃子」所蒐集的足以識別使用者身分的個人資料，僅供桃園市政府資訊科技局之桃園市市民卡APP相關活動或「紅利桃子」依照蒐集之目的進行處理和利用，並於提供服務期間內或法令所定應保存之期間內，持續保管、處理及利用相關資料。絕不會提供給其他第三人(包括境內及境外)、或移作蒐集目的以外之使用，但在符合法令規範或依循下列原則之前提下，可能將您的個人資料提供予第三人：<br>
+                (一)取得您的同意或授權允許時<br>
+                (二)為提供優惠措施，或為完成提供服務基於委外契約關係所必要者<br>
+                (三)為協助辦理保險事故出險而提供給保險人<br>
+                (四)配合司法機關調查，或依相關法令規定或善意相信有權主管機關之命令或要求。<br>
+                <br>
+                <br>
+                依據戶籍法第75條規定：「意圖供冒用身分使用，而偽造、變造國民身分證，足以生損害於公眾或他人者，處五年以下有期徒刑、拘役或科或併科新臺幣五十萬元以下罰金。行使前項偽造、變造之國民身分證者，亦同。將國民身分證交付他人，以供冒名使用，或冒用身分而使用他人交付或遺失之國民身分證，足以生損害於公眾或他人者，處三年以下有期徒刑、拘役或科或併科新臺幣三十萬元以下罰金。」</p>
 
                 <h4>■ 資料安全</h4>
-                <p>「數位桃園1000+市民卡振興加碼」將以合於產業標準之合理技術及程序，維護個人資料之安全。</p>
+                <p>「紅利桃子」將以合於產業標準之合理技術及程序，維護個人資料之安全。</p>
 
                 <h4>■ 修訂之權利</h4>
-                <p>「數位桃園1000+市民卡振興加碼」有權隨時修訂本隱私權聲明及相關告知事項，並得於修訂後公佈在「數位桃園1000+市民卡振興加碼」網站上之適當位置，不另行個別通知，您可以隨時在「數位桃園1000+市民卡振興加碼」網站上詳閱修訂後的隱私權聲明及相關告知事項。</p>
+                <p>「紅利桃子」有權隨時修訂本隱私權聲明及相關告知事項，並得於修訂後公佈在「紅利桃子」網站上之適當位置，不另行個別通知，您可以隨時在「紅利桃子」網站上詳閱修訂後的隱私權聲明及相關告知事項。</p>
 
                 <h4>■ Cookie運用政策</h4>
                 <p>Cookie是伺服端為了區別使用者的不同喜好，由瀏覽器寫入使用者硬碟的一些簡短資訊。雖然Cookie會識別使用者的電腦，但是無法識別使用者的身分。您也可以透過在您的瀏覽器中選擇修改您對Cookie的接受程度，如果您選擇拒絕所有的Cookie，您可能無法正常使用本網站。<br>
-                若您對「「數位桃園1000+市民卡振興加碼」」的隱私保護及資訊安全政策有任何疑問，都歡迎您隨時與我們聯絡。</p>
+                若您對「「紅利桃子」」的隱私保護及資訊安全政策有任何疑問，都歡迎您隨時與我們聯絡。</p>
 
                 <h4>■ Google Cloud 資料中心安全性與法規遵循</h4>
                 <p><a href="#" target="_blank">https://cloud.google.com/security/compliance/</a></p>
  
                 <h4>■ 聯絡方式</h4>
                 <p>承辦單位：點點全球股份有限公司<br>
-                客服電話：(03)332-2101#6966</p>
+                    客服信箱：<a href="mailto:tycc@mail.tycg.gov.tw" target="_blank">tycc@mail.tycg.gov.tw</a></p>
             </section>
         </main>
     </body>
