--- a/iiot/peach/point.html
+++ b/iiot/peach/point.html
@@ -155,7 +155,7 @@
                             <span class="bg-pink">全民攻略 - 紅利桃子怎麼拿？</span>
                         </h3>
                         <div>
-                            <img src="images/0707/img-join-03.jpg" width="100%" alt="紅利桃子怎麼拿？">
+                            <img src="images/0714/img-join-03.jpg" width="100%" alt="紅利桃子怎麼拿？">
                         </div>
                         <div class="info">
                             <h5>振興活動期間，民眾可透過以下各種多元管道取得紅利桃子：</h5>
@@ -174,6 +174,9 @@
                                 </li>
                                 <li>
                                     <p><span class="blue">加碼農業局活動：</span>加碼農業局活動：參加桃園市農業局「111年桃園市防疫有機蔬菜箱」，依照實際付款採購者之意願登記報名，資科局提供 30 點紅利桃子。<span class="c-red">（限量8,000名，<a href="https://agriculture.tycg.gov.tw/home.jsp?id=255&parentpath=0,103&mcustomize=multimessage_view.jsp&dataserno=202206270024&aplistdn=ou=hotnews,ou=chinese,ou=ap_root,o=tycg,c=tw&toolsflag=Y" target="_blank">詳見該活動官網</a>）</span></p>
+                                </li>
+                                <li>
+                                    <p><span class="blue">加碼經發局活動：</span>週週抽吃飯金中獎名單，由中獎人確實完成吃飯金兌獎後，加贈紅利桃子點數每名300點（限量前6,000名中獎者，<a href="https://2022lovetyn.tw/index.php" target="_blank">詳見該活動官網</a>）</span></p>
                                 </li>
                             </ul>
                         </div>
