--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -66,6 +66,9 @@
                     <a href="point.html">民眾專區</a>
                 </li>
                 <li class="pushy-link">
+                    <a href="https://lihi3.com/BYXkv" target="_blank">前往紅利桃子</a>
+                </li>
+                <li class="pushy-link">
                     <a href="business.html">業者專區</a>
                 </li>
                 <li class="pushy-link">
@@ -112,6 +115,9 @@
                             </li>
                             <li>
                                 <a href="business.html#link01">如何成為特約店家</a>
+                            </li>
+                            <li>
+                                <a href="https://lihi3.com/BYXkv" target="_blank">前往紅利桃子</a>
                             </li>
                         </ul>
                     </li>
@@ -204,10 +210,9 @@
 
                     <div class="card" id="goThe02">
                         <div>
-                            <!-- https://lihi3.com/BYXkv" -->
-                            <a class="a-an" style="cursor: initial;">
-                                <img class="pc-show" src="images/img-event-hot-0706.jpg" width="100%" alt="紅利桃子 - 加碼活動">
-                                <img class="mob-show" src="images/img-event-hot-mob-0706.jpg" width="100%" alt="紅利桃子 - 加碼活動">
+                            <a class="a-an" href="https://lihi3.com/BYXkv" target="_blank">
+                                <img class="pc-show" src="images/img-event-hot.jpg" width="100%" alt="紅利桃子 - 加碼活動">
+                                <img class="mob-show" src="images/img-event-hot-mob.jpg" width="100%" alt="紅利桃子 - 加碼活動">
                             </a>
                         </div>
                     </div>
