--- a/iiot/peach/faq.html
+++ b/iiot/peach/faq.html
@@ -70,6 +70,9 @@
                     <a href="point.html">民眾專區</a>
                 </li>
                 <li class="pushy-link">
+                    <a href="https://lihi3.com/BYXkv" target="_blank">前往紅利桃子</a>
+                </li>
+                <li class="pushy-link">
                     <a href="business.html">業者專區</a>
                 </li>
                 <li class="pushy-link">
