--- a/iiot/peach/point.html
+++ b/iiot/peach/point.html
@@ -70,6 +70,9 @@
                     <a href="point.html">民眾專區</a>
                 </li>
                 <li class="pushy-link">
+                    <a href="https://lihi3.com/BYXkv" target="_blank">前往紅利桃子</a>
+                </li>
+                <li class="pushy-link">
                     <a href="business.html">業者專區</a>
                 </li>
                 <li class="pushy-link">
@@ -109,6 +112,9 @@
                             </li>
                             <li>
                                 <a href="business.html#link01">如何成為特約店家</a>
+                            </li>
+                            <li>
+                                <a href="https://lihi3.com/BYXkv" target="_blank">前往紅利桃子</a>
                             </li>
                         </ul>
                     </li>
