紅利桃子 - 新增加入2顆按鈕與店家提醒語

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -163,9 +163,12 @@
                                 <p>桃園市政府深化市民數位生活，引領數位新經濟，由資訊科技局全新打造的「市民卡紅利桃子」平台，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強在地振興將於7月15日起，結合各局處活動送出千萬元台幣等值的紅利桃子點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1點=1元），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。</p>
                                 <h5>最新消息</h5>
                                 <p>「點數特約商家」招募中，加入辦法請洽業者專區<br><a href="https://forms.gle/cjEuN9TL8Wtf9iga6" target="_blank">各場次線上招商說明會報名</a></p>
-                                <div class="slider-banner">
+                                <div class="join-btn clearfix">
+                                    <a href="https://lihi3.com/BYXkv" target="_blank">
+                                        <img  src="images/point-join-1.png" width="100%" alt="紅利桃子 - 民眾加入按鈕">
+                                    </a>
                                     <a href="https://lihi3.com/psG7v" target="_blank">
-                                        <img width="100%" src="images/btn-form-0706.png" alt="「點數特約商家」招募中 （立即點我申請加入）">
+                                        <img src="images/point-join-2.png" width="100%" alt="紅利桃子 - 店家加入按鈕">
                                     </a>
                                 </div>
                             </div>
@@ -246,6 +249,7 @@
                         <h3 class="sub-title">
                             <span class="bg-pink">紅利桃子可以去哪消費？</span>
                         </h3>
+                        <p class="text-remark">※特約上加陸續加入中，實際折抵請依紅利桃子平台「優惠好康」顯示店家為準！</p>
                         <div>
                             <img src="images/0707/shop-logos.jpg" width="100%" alt="紅利桃子可以去哪消費？">
                         </div>
