紅利桃子 - 首頁新增"查看特約商家"按鈕

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -249,6 +249,9 @@
                         <h3 class="sub-title">
                             <span class="bg-pink">紅利桃子可以去哪消費？</span>
                         </h3>
+                        <a class="store-more a-an" href="https://lihi3.com/nYaEQ" target="_blank">
+                            <img src="images/btn_store_more.png" width="100%" alt="點我查看特約商家">
+                        </a>
                         <p class="text-remark">※特約上加陸續加入中，實際折抵請依紅利桃子平台「優惠好康」顯示店家為準！</p>
                         <div>
                             <img src="images/0707/shop-logos.jpg" width="100%" alt="紅利桃子可以去哪消費？">
