--- a/quickclick/menu-new-1.html
+++ b/quickclick/menu-new-1.html
@@ -28,7 +28,7 @@
             <div class="search-box">
                 <input class="default" type="text" placeholder="搜尋關鍵字">
             </div>
-            <a class="btn-batch-operation btn--primary-l" href="#">批次操作</a>
+            <a class="btn-batch-operation btn--primary-l" href="menu-batch-edit.html">批次操作</a>
             <a class="btn-menuadd-operation btn--primary-l" href="menu-new-1-menu-add.html">整單加購</a>
             <input class="btn-save btn--primary-xl " type="submit" value="儲存">
             <!-- <ul class="btn-menu-actions">
