紅利桃子 - 新增"合作活動"與第一銀行logo

--- a/iiot/peach/faq.html
+++ b/iiot/peach/faq.html
@@ -208,6 +208,11 @@
                                             <img src="images/dotdot_logo.png" alt="全球點點">
                                         </a>
                                     </li>
+                                    <li>
+                                        <a href="https://www.firstbank.com.tw/sites/fcb/Personalhome" target="_blank">
+                                            <img src="images/Logo-firstbank.png" alt="第一銀行">
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
