--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -212,6 +212,9 @@
                     </div>
 
                     <div class="card" id="goThe02">
+                        <h3 class="sub-title">
+                            <span class="bg-pink">資科局加碼活動</span>
+                        </h3>
                         <div>
                             <a class="a-an" href="https://lihi3.com/BYXkv" target="_blank">
                                 <img class="pc-show" src="images/img-event-hot.jpg" width="100%" alt="紅利桃子 - 加碼活動">
@@ -247,12 +250,30 @@
 
                     <div class="card">
                         <h3 class="sub-title">
+                            <span class="bg-pink">合作活動</span>
+                        </h3>
+                        <ul class="tycg-card clearfix">
+                            <li>
+                                <a class="tycg-photo" href="https://card.firstbank.com.tw/sites/Satellite?c=CreditCard&cid=1565695121095&d=Touch&pagename=FirstBankCard%2FCreditCard%2Fzh%2FCardActivityDetailView" target="_blank">
+                                    <img src="images/other_event_01.png" alt="第一銀行">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="tycg-photo">
+                                    <img src="images/other_event_comingsoon.png" alt="coming soon">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="card">
+                        <h3 class="sub-title">
                             <span class="bg-pink">紅利桃子可以去哪消費？</span>
                         </h3>
                         <a class="store-more a-an" href="https://lihi3.com/nYaEQ" target="_blank">
                             <img src="images/btn_store_more.png" width="100%" alt="點我查看特約商家">
                         </a>
-                        <p class="text-remark">※特約上加陸續加入中，實際折抵請依紅利桃子平台「優惠好康」顯示店家為準！</p>
+                        <p class="text-remark">※ 特約商家陸續加入中，實際折抵請依紅利桃子平台「優惠好康」顯示店家為準！</p>
                         <div>
                             <img src="images/0707/shop-logos.jpg" width="100%" alt="紅利桃子可以去哪消費？">
                         </div>
@@ -313,6 +334,11 @@
                                     <li>
                                         <a href="https://dotdot.cc/" target="_blank">
                                             <img src="images/dotdot_logo.png" alt="全球點點">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.firstbank.com.tw/sites/fcb/Personalhome" target="_blank">
+                                            <img src="images/Logo-firstbank.png" alt="第一銀行">
                                         </a>
                                     </li>
                                 </ul>
