紅利桃子 - 更新觀旅局圖片內容

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -230,7 +230,7 @@
                         <ul class="tycg-card clearfix">
                             <li>
                                 <a class="tycg-photo" href="https://lovetystay.tycg.gov.tw/" target="_blank">
-                                    <img src="images/img-event-01.png" alt="觀旅局">
+                                    <img src="images/img-event-01-0722.png" alt="觀旅局">
                                 </a>
                             </li>
                             <li>
