qc-新菜單後台 - 新增加購題型popup 多顆返回←箭頭

--- a/quickclick/menu-new-2-add-product-1-new.html
+++ b/quickclick/menu-new-2-add-product-1-new.html
@@ -19,6 +19,11 @@
                 <section id="popup-choose-add-group" class="white-popup mfp-hide popup-width-m">
                     <div class="popup-container">
                         <div class="top-title">
+                            <div class="arr-back">
+                                <a href="menu.html">
+                                    <span><i class="fas fa-arrow-left"></i></span>
+                                </a>
+                            </div>
                             <h4><span>新增加購題型</span></h4>
                             <p class="sub-title">請先新增題型名稱，再新增題型內的選項。</p>
                         </div>
